--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <div class="title">
+        <h2>our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <div class="section-center">
+        <article class="menu-item">
+        <img src="menu-item.jpeg" class="photo" alt="menu item" />
+        <div class="item-info">
+          <header>
+          <h4>Panquecas</h4>
+          <h4 class="price">R$15,00</h4>
+          </header>
+          <p class="item-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at sollicitudin erat, ac dictum enim. Integer vel nunc at mi.
+          </p>
+        </div>
+        </article>
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
