--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
   <body>
     <section class="menu">
       <div class="title">
-        <h2>our menu</h2>
+        <h2>menu</h2>
         <div class="underline"></div>
       </div>
+      <!--filter buttons-->
+      <div class="btn-container">
+        <button class="filter-btn" type="button" data-id="all">tudo</button>
+        <button class="filter-btn" type="button" data-id="breakfast">lanche</button>
+        <button class="filter-btn" type="button" data-id="lunch">almoço</button>
+        <button class="filter-btn" type="button" data-id="shakes">bebidas</button>
+      </div>
+      <!--menu items-->
       <div class="section-center">
         <article class="menu-item">
         <img src="menu-item.jpeg" class="photo" alt="menu item" />
         <div class="item-info">
           <header>
           <h4>Panquecas</h4>
-          <h4 class="price">R$15,00</h4>
+          <h4 class="price">$15.00</h4>
           </header>
           <p class="item-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at sollicitudin erat, ac dictum enim. Integer vel nunc at mi.
